# autoCheck

./: README.md  main.py  pyproject.toml
app/: pipeline.py
app/model/fine_tuned_ner/: meta.json
app/model/fine_tuned_ner/ner/: model  moves
app/model/fine_tuned_ner/vocab/: strings.json
app/static/css/: style.css
app/static/js/: script.js
app/templates/: home.html  index.html
